--- a/norte.parcial1.taglioretti.gabriel.git/norte.parcial1.taglioretti.gabriel.git/Content/site.css
+++ b/norte.parcial1.taglioretti.gabriel.git/norte.parcial1.taglioretti.gabriel.git/Content/site.css
@@ -1,21 +1,92 @@
-﻿body {
+﻿
+.header {
+    grid-area: header;
+    background-color: #286af0;
+    font-size: 15px;
+    text-align: left;
 }
 
-#container {
-    width: 900px;
-    margin: 0px auto;
+.imagenLogo {
+    text-align: left;
+    width: 250px;
+    height: 35px;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-areas: 'header header header header header header' 'left left middle middle right right' 'footer footer footer footer footer footer';
+}
+
+.izquierda,
+.centro,
+.derecha {
+    padding: 10px;
+}
+
+.izquierda {
+    grid-area: left;
+    background-color: #ccc;
+}
+
+.centro {
+    grid-area: middle;
+    margin-bottom: 135px;
+    min-height: 100%;
+}
+
+.derecha {
+    grid-area: right;
 }
 
 section {
-    float: right;
-}
-
-aside {
-    float: left;
-    min-height: 760px;
-}
-
-footer {
+    background-color: #ccc;
     text-align: center;
-    clear: both;
+    margin-bottom: 50px;
+}
+
+img {
+    margin-top: 50px;
+    width: 20%;
+}
+
+.epigrafe {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.contenidoRelacionado {
+    border: solid 2px;
+    border-color: red;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+p {
+    text-align: left;
+}
+
+.textoCosmo {
+    margin-top: 45px;
+}
+
+.figcaption {
+    font-size: 155px;
+}
+
+.footer {
+    grid-area: footer;
+    background-color: #286af0;
+    padding: 0px;
+    text-align: center;
+}
+
+.textoFooter {
+    text-align: center;
+    color: white;
 }
