--- a/norte.parcial1.taglioretti.gabriel.git/norte.parcial1.taglioretti.gabriel.git/Views/Shared/_Layout.cshtml
+++ b/norte.parcial1.taglioretti.gabriel.git/norte.parcial1.taglioretti.gabriel.git/Views/Shared/_Layout.cshtml
@@ -3,34 +3,57 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Vida en Otros Planetas</title>
+    <title>@ViewBag.Title - PARCIAL</title>
     <link href="~/Content/site.css" rel="stylesheet" />
 </head>
 <body>
     <div id="container">
+        <div class="grid-container">
 
-        <section>
-            <article>
-                @RenderBody()
-            </article>
-        </section>
+            <div class="header">
+                <h2>¿Hay vida en otros planetas? - Sistemas Solares #445 </h2>
+            </div>
 
-        <aside>
-            <article>
-                <div>
-                    <h3>Contenido Relacionado</h3>
-                    <div>
-                        <ul>      
-                        </ul>
-                    </div>
-                </div>
-            </article>
-        </aside>
+            <div class="izquierda"></div>
+            <div class="centro" style="background-color:#ccc;">
 
-        <footer>
-            <p>¿Hay Vida en Otros Planetas? - &copy; @DateTime.Now.Year </p>
-        </footer>
+                <section>
+                    <article>
+                        <img class="imagen" src="~/Content/Img/expansion-hubble.jpg" alt="Foto" />
+                        <figcaption> Figura: Expansion del Hubble </figcaption>
+                        @RenderBody()
+                    </article>
+                </section>
+            
+            </div>
+            <div class="derecha" style="background-color:white;">
+
+                <aside id="pub">
+                    <article>
+                        <div>
+                            <h3 class="contenidoRelacionado">Contenido relacionado</h3>
+                            <div>
+                                <ul>
+
+                                    <li><a href="/Home/Cosmo">Constelaciones</a> </li>
+
+                                </ul>
+                            </div>
+                        </div>
+                    </article>
+                </aside>
+
+            </div>
+
+            <div class="footer">
+
+                <p class="textoFooter">¿Hay vida en otros planetas? - &copy; @DateTime.Now.Year</p>
+            </div>
+        </div>
 
     </div>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
+
+
