--- a/norte.parcial1.taglioretti.gabriel.git/norte.parcial1.taglioretti.gabriel.git/Views/Shared/_Layout.cshtml
+++ b/norte.parcial1.taglioretti.gabriel.git/norte.parcial1.taglioretti.gabriel.git/Views/Shared/_Layout.cshtml
@@ -9,14 +9,11 @@
 <body>
     <div id="container">
         <div class="grid-container">
-
-            <div class="header">
+ <div class="header">
                 <h2>¿Hay vida en otros planetas? - Sistemas Solares #445 </h2>
             </div>
-
             <div class="izquierda"></div>
-            <div class="centro" style="background-color:#ccc;">
-
+            <div class="centro" style="background-color:#ccc;"
                 <section>
                     <article>
                         <img class="imagen" src="~/Content/Img/expansion-hubble.jpg" alt="Foto" />
@@ -24,34 +21,24 @@
                         @RenderBody()
                     </article>
                 </section>
-            
             </div>
-            <div class="derecha" style="background-color:white;">
-
                 <aside id="pub">
                     <article>
                         <div>
                             <h3 class="contenidoRelacionado">Contenido relacionado</h3>
                             <div>
                                 <ul>
-
                                     <li><a href="/Home/Cosmo">Constelaciones</a> </li>
-
                                 </ul>
                             </div>
                         </div>
                     </article>
                 </aside>
-
             </div>
-
             <div class="footer">
-
                 <p class="textoFooter">¿Hay vida en otros planetas? - &copy; @DateTime.Now.Year</p>
             </div>
         </div>
-
-    </div>
     @RenderSection("scripts", required: false)
 </body>
 </html>
